# catomic

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.txt  SECURITY.md  TODO.md  agent-footer-fix-error.txt  agent-footer-fix-verify-error.txt  agent-footer-full-test-error.txt  build.rs  deny.toml
.github/: agent-footer-overlay.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: acceptance.yml  agent-footer-fix-pr.yml  agent-footer-fix.yml  agent-footer-full-test.yml  agent-footer-overlay-push.yml  ci.yml  release.yml  supply-chain.yml
docs/: architecture.md  compatibility.md  llm-rules.md  mobile-android-smoke.md  mobile.md  open-beta-daily-driver-gate.md  performance.md  phase-2-acceptance.md  phase-3-acceptance.md  phase-4-acceptance.md  phase-5-acceptance.md  phase-6-acceptance.md  phase-7-acceptance.md  phase-8-acceptance.md  releasing.md  user-guide.md  v0.1-acceptance.md
docs/compatibility/: result-schema-v1.json
docs/decisions/: 0001-plain-project-modes.md  0002-buffer-piece-table.md  0003-large-file-storage.md  0004-pty-smoke-dev-dependency.md  0005-paged-large-files.md  0005-pulldown-cmark-preview.md  0006-editable-paged-files.md  0007-document-coordinates.md  (+10 more)
examples/: keyboard_probe.rs
scripts/: check_markdown_links.py  daily-driver-gate.sh  install.sh  verify-release.sh
src/: app.rs  build_info.rs  cli.rs  clipboard.rs  help_catalog.rs  main.rs  mode.rs  process_pipe.rs  startup_file_args.rs
tests/: config_cli.rs  daily_driver_gate.sh  install_script.rs  pty_inline_clanker.rs  pty_smoke.rs
(+354 files in other folders)
