[package]
name = "catomic"
version = "0.1.0"
edition = "2021"
authors = ["maelguimet"]
description = "Nano that isn't afraid of useful shortcuts. Fast, obvious terminal editor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/maelguimet/catomic"

[dependencies]
crossterm = "0.28"
notify = "8.2.0"
pulldown-cmark = { version = "0.13.4", default-features = false }

[dev-dependencies]
# Dev-only PTY harness; see docs/decisions/0004-pty-smoke-dev-dependency.md.
portable-pty = "0.9.0"

[[bin]]
name = "catomic"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
